Overlay minimal frontend - add a few OSF customizations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 screen.welcome.welcome=Congratulations on bringing CAS online!  To learn how to authenticate, please review the default authentication handler configuration.
 screen.welcome.security=For security reasons, please <a href="logout">log out</a> and exit your web browser when you are done accessing \
   services that require authentication!
-screen.welcome.instructions=Enter Username & Password
+screen.welcome.instructions=Sign in with your OSF account to continue
 screen.welcome.forcedsso=Welcome back, <code><strong>{0}</strong></code>. We have detected an existing single sign-on session for you. However, \
   you are being asked to re-authenticate again as CAS cannot successfully accept your previous single sign-on participation status which may be \
   related to the policy assigned to <code><strong>{1}</strong></code>. Please enter your Username and Password and proceed.
@@ -139,7 +139,9 @@ screen.defaultauthn.title=Static Authentication
 screen.defaultauthn.heading=CAS is configured to accept a static list of users for primary authentication. Please be advised that this is ONLY useful for \
   demo purposes. It is recommended that you connect CAS to LDAP, JDBC, etc instead.
 logo.title=go to Apereo home page
-copyright=Copyright &copy; 2005&ndash;2020 Apereo, Inc.
+copyright=Copyright &copy; 2011 &ndash; 2020 <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a> &#124; \
+  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a> &#124; \
+  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>
 screen.capslock.on = CAPSLOCK key is turned on!
 screen.button.continue=Continue
 screen.post.response.message=You are being redirected to {0}.
@@ -395,7 +397,15 @@ screen.mfaUnavailable.message=CAS was unable to reach your configured MFA provid
 # Login View
 #####################################################################
 #Resources Labels
-cas.login.pagetitle=Login
+cas.login.pagetitle=Sign in
+cas.login.resources.osf.home=OSF Home
+cas.login.resources.osf.preprints=OSF Preprints
+cas.login.resources.osf.registries=OSF Registries
+cas.login.resources.osf.meetings=OSF Meetings
+cas.login.resources.osf.institutions=OSF Meetings
+cas.login.resources.osf.support=OSF Support
+cas.login.resources.osf.donate=OSF Donate
+cas.login.resources.cos.home=Center For Open Science
 cas.login.resources.header=Resources
 cas.login.resources.wiki=Documentation
 cas.login.resources.endpoints=Actuator Endpoints
