Minor frontend fix

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -404,7 +404,7 @@ cas.login.resources.osf.registries=OSF Registries
 cas.login.resources.osf.meetings=OSF Meetings
 cas.login.resources.osf.institutions=OSF Meetings
 cas.login.resources.osf.support=OSF Support
-cas.login.resources.osf.donate=OSF Donate
+cas.login.resources.cos.donate=Donate
 cas.login.resources.cos.home=Center For Open Science
 cas.login.resources.header=Resources
 cas.login.resources.wiki=Documentation
