Create dedicated exception pages and update the login web flow

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -285,8 +285,6 @@ screen.surrogates.account.selection.error=You are not authorized to impersonate 
 # Password policy
 password.expiration.warning=Your password expires in {0} day(s). Please <a href="https://pm.example.edu">change your password</a> now.
 password.expiration.loginsRemaining=You have {0} login(s) remaining before you <strong>MUST</strong> change your password.
-screen.accountdisabled.heading=This account has been disabled.
-screen.accountdisabled.message=Please contact the system administrator to regain access.
 screen.accountlocked.heading=This account has been locked.
 screen.accountlocked.message=Please contact the system administrator to regain access.
 screen.expiredpass.heading=Your password has expired.
@@ -485,3 +483,23 @@ cas.mfa.registerdevice.button.skip=Skip
 
 passwordless.error.unknown.user=Provided username cannot be recognized and located by CAS.
 passwordless.error.invalid.user=Provided username does not carry enough contact information.
+
+screen.accountdisabled.heading=Account disabled
+screen.accountdisabled.message=The OSF account associated with the email has been disabled. Please contact <a style=\
+  "white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> to regain access.
+screen.accountnotconfirmedidp.heading=Account not confirmed
+screen.accountnotconfirmedidp.message=The OSF account associated with the email has been registered but not confirmed. \
+  Our records show that this account was created via ORCiD login. Please check your email (and spam folder) for the \
+  confirmation link. If you believe this should not happen, please contact <a style="white-space: nowrap" href=\
+  "mailto:support@osf.io">OSF Support</a>.
+screen.accountnotconfirmedosf.heading=Account not confirmed
+screen.accountnotconfirmedosf.message=The OSF account associated with the email has been registered but not confirmed. \
+  Please check your email (and spam folder) or click the button below to resend your confirmation email.
+screen.invaliduserstatus.heading=Account not valid
+screen.invaliduserstatus.message=Cannot log in to an invalid account. If you believe this should not happen, please \
+  contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a>.
+screen.invalidverificationkey.heading=Invalid Verification key
+screen.invalidverificationkey.message=Automatic login has failed due to invalid one-time verification key. This key \
+  may have expired or have already been used.
+screen.onetimepasswordrequired.heading=Two-factor authentication required
+screen.onetimepasswordrequired.message=(page under construction / feature not implemented)
