Refactor messages.properties
* Moved all OSF customized messages to the botton of the file
* Commented out overridden messages (instead of deleting them)
* Updated in-line and stand-alone exception messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,15 +1,23 @@
+########################################################################################################################
+########################################################################################################################
+# Default messages.properties as of 6.2.x, see:
+# https://github.com/apereo/cas/blob/6.2.x/support/cas-server-support-thymeleaf/src/main/resources/messages.properties
+#
+# Note: customized messages are commented out and their respective customizations are added to the end of this file
+########################################################################################################################
+#
 screen.welcome.welcome=Congratulations on bringing CAS online!  To learn how to authenticate, please review the default authentication handler configuration.
 screen.welcome.security=For security reasons, please <a href="logout">log out</a> and exit your web browser when you are done accessing \
   services that require authentication!
-screen.welcome.instructions=Sign in with your OSF account to continue
+# screen.welcome.instructions=Enter Username & Password
 screen.welcome.forcedsso=Welcome back, <code><strong>{0}</strong></code>. We have detected an existing single sign-on session for you. However, \
   you are being asked to re-authenticate again as CAS cannot successfully accept your previous single sign-on participation status which may be \
   related to the policy assigned to <code><strong>{1}</strong></code>. Please enter your Username and Password and proceed.
 screen.welcome.label.source=Source:
 screen.welcome.label.netid=<span class="accesskey">U</span>sername:
 screen.welcome.label.netid.accesskey=u
-screen.welcome.label.password=<span class="accesskey">P</span>assword:
-screen.welcome.label.password.accesskey=p
+# screen.welcome.label.password=<span class="accesskey">P</span>assword:
+# screen.welcome.label.password.accesskey=p
 screen.welcome.label.publicstation=I am at a public workstation.
 screen.welcome.label.warn=<span class="accesskey">W</span>arn me!
 screen.welcome.label.warn.accesskey=w
@@ -139,9 +147,7 @@ screen.defaultauthn.title=Static Authentication
 screen.defaultauthn.heading=CAS is configured to accept a static list of users for primary authentication. Please be advised that this is ONLY useful for \
   demo purposes. It is recommended that you connect CAS to LDAP, JDBC, etc instead.
 logo.title=go to Apereo home page
-copyright=Copyright &copy; 2011 &ndash; 2020 <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a> &#124; \
-  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a> &#124; \
-  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>
+# copyright=Copyright &copy; 2005&ndash;2020 Apereo, Inc.
 screen.capslock.on = CAPSLOCK key is turned on!
 screen.button.continue=Continue
 screen.post.response.message=You are being redirected to {0}.
@@ -226,7 +232,7 @@ pm.passwordFailedCriteria=Provided password does not satisfy the password securi
 pm.updateFailure=Account password could not be modified. Please try again.
 
 # Authentication failure messages
-authenticationFailure.AccountDisabledException=This account has been disabled.
+# authenticationFailure.AccountDisabledException=This account has been disabled.
 authenticationFailure.AccountLockedException=This account has been locked.
 authenticationFailure.AccountExpiredException=This account has expired and is forbidden to login at this time.
 authenticationFailure.CredentialExpiredException=Your password has expired.
@@ -234,8 +240,8 @@ authenticationFailure.InvalidLoginLocationException=You cannot login from this w
 authenticationFailure.UniquePrincipalRequiredException=You cannot login at this time, since you have another active single sign-on session in progress \
   and CAS is configured with an authentication policy the prevents multiple concurrent single sign-on sessions.
 authenticationFailure.InvalidLoginTimeException=Your account is forbidden to login at this time.
-authenticationFailure.AccountNotFoundException=Your account is not recognized and cannot login at this time.
-authenticationFailure.FailedLoginException=Authentication attempt has failed, likely due to invalid credentials. Please verify and try again.
+# authenticationFailure.AccountNotFoundException=Your account is not recognized and cannot login at this time.
+# authenticationFailure.FailedLoginException=Authentication attempt has failed, likely due to invalid credentials. Please verify and try again.
 authenticationFailure.MultifactorAuthenticationProviderAbsentException=Unable to satisfy multifactor authentication requirements. \
   Your account is configured for a multifactor authentication strategy, yet CAS is unable to locate and execute that strategy \
   most likely due to misconfiguration of the server. Contact the service administrators for assistance.
@@ -285,6 +291,8 @@ screen.surrogates.account.selection.error=You are not authorized to impersonate 
 # Password policy
 password.expiration.warning=Your password expires in {0} day(s). Please <a href="https://pm.example.edu">change your password</a> now.
 password.expiration.loginsRemaining=You have {0} login(s) remaining before you <strong>MUST</strong> change your password.
+# screen.accountdisabled.heading=This account has been disabled.
+# screen.accountdisabled.message=Please contact the system administrator to regain access.
 screen.accountlocked.heading=This account has been locked.
 screen.accountlocked.message=Please contact the system administrator to regain access.
 screen.expiredpass.heading=Your password has expired.
@@ -369,16 +377,16 @@ screen.oidc.confirm.asksinfo=The client is asking for the following information:
 screen.oidc.confirm.dynamic=This client was dynamically registered at <code>{0}</code>.
 
 # Unavailable
-screen.unavailable.header=CAS error
-screen.unavailable.heading=CAS is unable to process this request: "{0}:{1}"
-screen.unavailable.message=There was an error trying to complete your request. \
-<strong>Please notify your support desk or try again.</strong> \
-<div>Apereo is a non-profit open source software governance foundation. The CAS software is an Apereo sponsored project \
-and is freely downloadable and usable by anyone. However, Apereo does not operate the systems of anyone using the \
-software and in most cases doesn't even know who is using it or how to contact them unless they are an active part \
-of the Apereo community.<br/></br>If you are having problems logging in using CAS, \
-<strong>you will need to contact the IT staff or Help Desk of your organization for assistance</strong>. \
-<br/><br/>We wish we could be more directly helpful to you.</div>
+# screen.unavailable.header=CAS error
+# screen.unavailable.heading=CAS is unable to process this request: "{0}:{1}"
+# screen.unavailable.message=There was an error trying to complete your request. \
+# <strong>Please notify your support desk or try again.</strong> \
+# <div>Apereo is a non-profit open source software governance foundation. The CAS software is an Apereo sponsored project \
+# and is freely downloadable and usable by anyone. However, Apereo does not operate the systems of anyone using the \
+# software and in most cases doesn't even know who is using it or how to contact them unless they are an active part \
+# of the Apereo community.<br/></br>If you are having problems logging in using CAS, \
+# <strong>you will need to contact the IT staff or Help Desk of your organization for assistance</strong>. \
+# <br/><br/>We wish we could be more directly helpful to you.</div>
 
 screen.mfaDenied.header=MFA Denied
 screen.mfaDenied.heading=MFA attempt has been denied by provider
@@ -395,15 +403,7 @@ screen.mfaUnavailable.message=CAS was unable to reach your configured MFA provid
 # Login View
 #####################################################################
 #Resources Labels
-cas.login.pagetitle=Sign in
-cas.login.resources.osf.home=OSF Home
-cas.login.resources.osf.preprints=OSF Preprints
-cas.login.resources.osf.registries=OSF Registries
-cas.login.resources.osf.meetings=OSF Meetings
-cas.login.resources.osf.institutions=OSF Meetings
-cas.login.resources.osf.support=OSF Support
-cas.login.resources.cos.donate=Donate
-cas.login.resources.cos.home=Center For Open Science
+# cas.login.pagetitle=Login
 cas.login.resources.header=Resources
 cas.login.resources.wiki=Documentation
 cas.login.resources.endpoints=Actuator Endpoints
@@ -483,7 +483,66 @@ cas.mfa.registerdevice.button.skip=Skip
 
 passwordless.error.unknown.user=Provided username cannot be recognized and located by CAS.
 passwordless.error.invalid.user=Provided username does not carry enough contact information.
+#
+# Enf of default messages.properties
+#
+########################################################################################################################
+########################################################################################################################
 
+
+
+########################################################################################################################
+########################################################################################################################
+# OSF CAS customized messages.properties
+########################################################################################################################
+#
+# Header
+#
+# App bar (top)
+#
+# App drawer (left)
+#
+cas.login.resources.osf.home=OSF Home
+cas.login.resources.osf.preprints=OSF Preprints
+cas.login.resources.osf.registries=OSF Registries
+cas.login.resources.osf.meetings=OSF Meetings
+cas.login.resources.osf.institutions=OSF Institutions
+cas.login.resources.osf.support=OSF Support
+cas.login.resources.cos.donate=Donate
+#
+# App notifications (right)
+#
+# Footer
+#
+copyright=Copyright &copy; 2011 &ndash; 2020 <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a> &#124; \
+  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a> &#124; \
+  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>
+#
+# Login page and login form submission
+#
+cas.login.pagetitle=Sign in
+screen.welcome.instructions=Sign in with your OSF account to continue
+screen.welcome.label.email=<span class="accesskey">E</span>mail
+screen.welcome.label.email.accesskey=e
+screen.welcome.label.password=<span class="accesskey">P</span>assword
+screen.welcome.label.password.accesskey=p
+#
+# Authentication exception messages on the login form submission page (inline / pop-up)
+#
+authenticationFailure.AccountDisabledException=This account has been disabled.
+authenticationFailure.AccountNotFoundException=The email or password you entered is incorrect.
+authenticationFailure.AccountNotConfirmedOsfException=The account you tried to log in to has not been confirmed.
+authenticationFailure.AccountNotConfirmedIdpException=The account you tried to log in to has not been confirmed.
+authenticationFailure.FailedLoginException=Authentication attempt has failed, likely due to invalid credentials. \
+  Please verify and try again.
+authenticationFailure.InvalidOneTimePasswordException=The one-time password you entered is incorrect.
+authenticationFailure.InvalidPasswordException=The email or password you entered is incorrect.
+authenticationFailure.InvalidVerificationKeyException=The verification key you entered is incorrect.
+authenticationFailure.InvalidUserStatusException=The account you tried to log in to is not active.
+authenticationFailure.OneTimePasswordRequiredException=Two-factor authentication required.
+#
+# Authentication exception messages in stand-alone exceptions views
+#
 screen.accountdisabled.heading=Account disabled
 screen.accountdisabled.message=The OSF account associated with the email has been disabled. Please contact <a style=\
   "white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> to regain access.
@@ -495,6 +554,10 @@ screen.accountnotconfirmedidp.message=The OSF account associated with the email 
 screen.accountnotconfirmedosf.heading=Account not confirmed
 screen.accountnotconfirmedosf.message=The OSF account associated with the email has been registered but not confirmed. \
   Please check your email (and spam folder) or click the button below to resend your confirmation email.
+screen.unavailable.header=CAS Error
+screen.unavailable.heading=OSF CAS is unable to process this request: "{0}:{1}".
+screen.unavailable.message=There was an error trying to complete your request. Please contact <a style="white-space: \
+  nowrap" href="mailto:support@osf.io">OSF Support</a> or try again later.
 screen.invaliduserstatus.heading=Account not valid
 screen.invaliduserstatus.message=Cannot log in to an invalid account. If you believe this should not happen, please \
   contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a>.
@@ -503,3 +566,8 @@ screen.invalidverificationkey.message=Automatic login has failed due to invalid 
   may have expired or have already been used.
 screen.onetimepasswordrequired.heading=Two-factor authentication required
 screen.onetimepasswordrequired.message=(page under construction / feature not implemented)
+#
+# Enf of OSF CAS customized messages.properties
+#
+########################################################################################################################
+########################################################################################################################
