Further customize messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,18 +22,18 @@ screen.welcome.label.publicstation=I am at a public workstation.
 screen.welcome.label.warn=<span class="accesskey">W</span>arn me!
 screen.welcome.label.warn.accesskey=w
 screen.welcome.label.warnremove=Do not warn me again
-screen.welcome.button.login=LOGIN
+# screen.welcome.button.login=LOGIN
 screen.welcome.button.logout=LOGOUT
 screen.welcome.button.loginwip=One moment please...
 screen.welcome.button.register=Register
 screen.welcome.button.print=Print
 screen.welcome.button.clear=CLEAR
-screen.welcome.label.loginwith=External Identity Providers
+# screen.welcome.label.loginwith=External Identity Providers
 screen.welcome.label.navto=Navigating to authentication provider. Please wait...
 
 screen.pm.button.submit=SUBMIT
 screen.pm.button.cancel=CANCEL
-screen.pm.button.forgotpwd=<a href="{0}">Forgot your password? </a>
+# screen.pm.button.forgotpwd=<a href="{0}">Forgot your password? </a>
 screen.pm.button.resetPassword=Reset your password
 screen.pm.button.forgotUsername=Forgot your username?
 screen.pm.reset.username=Username:
@@ -177,7 +177,7 @@ screen.error.page.doesnotexist=The page you are attempting to access does not ex
 screen.error.page.authdenied=Authorization Denied
 
 # Remember-Me Authentication
-screen.rememberme.checkbox.title=Remember Me
+# screen.rememberme.checkbox.title=Remember Me
 
 # Gua
 screen.gua.confirm.message=If you do not recognize this image as yours, do NOT continue.
@@ -502,6 +502,9 @@ passwordless.error.invalid.user=Provided username does not carry enough contact 
 #
 # App drawer (left)
 #
+cas.drawer.title=OSF CAS
+cas.drawer.subtitle=The central authentication and authorization service for OSF
+cas.login.resources.cas.home=CAS Home
 cas.login.resources.osf.home=OSF Home
 cas.login.resources.osf.preprints=OSF Preprints
 cas.login.resources.osf.registries=OSF Registries
@@ -509,6 +512,7 @@ cas.login.resources.osf.meetings=OSF Meetings
 cas.login.resources.osf.institutions=OSF Institutions
 cas.login.resources.osf.support=OSF Support
 cas.login.resources.cos.donate=Donate
+cas.login.resources.cos.home=COS Home
 #
 # App notifications (right)
 #
@@ -516,7 +520,16 @@ cas.login.resources.cos.donate=Donate
 #
 copyright=Copyright &copy; 2011 &ndash; 2020 <a style="white-space: nowrap" href="https://cos.io">Center for Open Science</a> &#124; \
   <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a> &#124; \
-  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a>
+  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a> &#124; \
+  <a style="white-space: nowrap" href="https://status.cos.io/">Status</a> &#124; \
+  <a style="white-space: nowrap" href="https://developer.osf.io/">API</a> &#124; \
+  <a style="white-space: nowrap" href="http://cos.io/top/">TOP Guidelines</a> &#124; \
+  <a style="white-space: nowrap" href="https://osf.io/ezcuj/wiki/home/">Reproducibility Project: Psychology</a> &#124; \
+  <a style="white-space: nowrap" href="https://osf.io/e81xl/wiki/home/">Reproducibility Project: Cancer Biology</a>
+#
+# IdP SSO
+#
+screen.welcome.label.loginwith=Sign in through external identity providers
 #
 # Login page and login form submission
 #
@@ -526,6 +539,12 @@ screen.welcome.label.email=<span class="accesskey">E</span>mail
 screen.welcome.label.email.accesskey=e
 screen.welcome.label.password=<span class="accesskey">P</span>assword
 screen.welcome.label.password.accesskey=p
+screen.welcome.button.login=Sign in
+screen.rememberme.checkbox.title=Stay signed in
+screen.pm.button.forgotpwd=Forgot your password?
+screen.pm.button.createaccount=Create an OSF account
+screen.pm.button.backtoosf=Back to OSF
+screen.pm.button.resendosfconfirmation=Resend confirmation email
 #
 # Two factor and login form submission
 #
@@ -533,7 +552,7 @@ cas.twofactor.pagetitle=Sign in
 screen.twofactor.instructions=Enter your one-time password to finish login
 screen.twofactor.label.onetimepassword=<span class="accesskey">O</span>ne-time password (6-digit)
 screen.twofactor.label.onetimepassword.accesskey=o
-screen.twofactor.button.verify=VERIFY
+screen.twofactor.button.verify=Verify
 screen.twofactor.button.verifywip=One moment please...
 #
 # Authentication exception messages on the login form submission page (inline / pop-up)
@@ -581,4 +600,31 @@ screen.onetimepasswordrequired.message=Two-factor authentication has been enable
 # Enf of OSF CAS customized messages.properties
 #
 ########################################################################################################################
+########################################################################################################################
+
+
+
+########################################################################################################################
+# OSF URLs
+########################################################################################################################
+#
+# OSF
+#
+osf.home.url=http://192.168.168.167:5000/
+osf.resend.osf.confirmation.url=http://192.168.168.167:5000/resend/
+osf.forgot.password.url=http://192.168.168.167:5000/forgotpassword/
+osf.create.account.url=http://192.168.168.167:5000/register/
+#
+# API
+#
+# Other
+#
+osf.preprints.home.url=http://192.168.168.167:5000/preprints/
+osf.registries.home.url=http://192.168.168.167:5000/registries/
+osf.institutions.home.url=http://192.168.168.167:5000/registries/
+osf.meetings.home.url=http://192.168.168.167:5000/meetings/
+osf.support.url=http://192.168.168.167:5000/support/
+osf.cos.donation.url=https://www.cos.io/about/support-cos/
+osf.cos.home.url=https://www.cos.io/
+#
 ########################################################################################################################
