Fix temporary staging3 links in messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -603,20 +603,20 @@ screen.institutionssonotimplemented.message=Successful login via external identi
 #
 # OSF
 #
-osf.home.url=https:/staging3.osf.io/
-osf.resend.osf.confirmation.url=https:/staging3.osf.io/resend/
-osf.forgot.password.url=https:/staging3.osf.io/forgotpassword/
-osf.create.account.url=https:/staging3.osf.io/register/
+osf.home.url=https://staging3.osf.io/
+osf.resend.osf.confirmation.url=https://staging3.osf.io/resend/
+osf.forgot.password.url=https://staging3.osf.io/forgotpassword/
+osf.create.account.url=https://staging3.osf.io/register/
 #
 # API
 #
 # Other
 #
-osf.preprints.home.url=https:/staging3.osf.io/preprints/
-osf.registries.home.url=https:/staging3.osf.io/registries/
-osf.institutions.home.url=https:/staging3.osf.io/institutions/
-osf.meetings.home.url=https:/staging3.osf.io/meetings/
-osf.support.url=https:/staging3.osf.io/support/
+osf.preprints.home.url=https://staging3.osf.io/preprints/
+osf.registries.home.url=https://staging3.osf.io/registries/
+osf.institutions.home.url=https://staging3.osf.io/institutions/
+osf.meetings.home.url=https://staging3.osf.io/meetings/
+osf.support.url=https://staging3.osf.io/support/
 osf.cos.donation.url=https://www.cos.io/about/support-cos/
 osf.cos.home.url=https://www.cos.io/
 #
