--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -482,10 +482,12 @@ cas.mfa.registerdevice.button.skip=Skip
 
 passwordless.error.unknown.user=Provided username cannot be recognized and located by CAS.
 passwordless.error.invalid.user=Provided username does not carry enough contact information.
+
+noop.message=This's a noop message.
 #
 ########################################################################################################################
 #
-# Enf of default messages.properties
+# End of default messages.properties
 #
 ########################################################################################################################
 
@@ -502,7 +504,7 @@ passwordless.error.invalid.user=Provided username does not carry enough contact 
 # App drawer (left)
 #
 cas.drawer.title=OSF CAS
-cas.drawer.subtitle=The central authentication and authorization service for OSF
+cas.drawer.subtitle=OSF CAS is the central authentication and authorization service for OSF
 cas.login.resources.cas.home=CAS Home
 cas.login.resources.osf.home=OSF Home
 cas.login.resources.osf.preprints=OSF Preprints
@@ -588,7 +590,7 @@ screen.unavailable.message=There was an error trying to complete your request. P
 screen.invaliduserstatus.heading=Account not valid
 screen.invaliduserstatus.message=Cannot log in to an invalid account. If you believe this should not happen, please \
   contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a>.
-screen.invalidverificationkey.heading=Invalid Verification key
+screen.invalidverificationkey.heading=Invalid verification key
 screen.invalidverificationkey.message=Automatic login has failed due to invalid one-time verification key. This key \
   may have expired or have already been used.
 screen.onetimepasswordrequired.heading=OSF Two-factor Authentication
