Refactor split-page design into one-column oldCAS style

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -546,6 +546,8 @@ screen.pm.button.forgotpwd=Forgot your password?
 screen.pm.button.createaccount=Create an OSF account
 screen.pm.button.backtoosf=Back to OSF
 screen.pm.button.resendosfconfirmation=Resend confirmation email
+screen.delegation.button.orcid=Sign in with ORCiD
+screen.delegation.button.institution=Sign in through institution
 #
 # Two factor and login form submission
 #
