Customize form-submission buttons
Extended the "submitbutton" fragment to take in background color as
args; added a cancel button to 2FA page and improved button styles.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -557,6 +557,7 @@ screen.twofactor.label.onetimepassword=<span class="accesskey">O</span>ne-time p
 screen.twofactor.label.onetimepassword.accesskey=o
 screen.twofactor.button.verify=Verify
 screen.twofactor.button.verifywip=One moment please...
+screen.twofactor.button.cancel=Cancel
 #
 # Authentication exception messages on the login form submission page (inline / pop-up)
 #
