--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -545,7 +545,6 @@ screen.rememberme.checkbox.title=Stay signed in
 screen.pm.button.forgotpwd=Forgot your password?
 screen.pm.button.createaccount=Create an OSF account
 screen.pm.button.backtoosf=Back to OSF
-screen.pm.button.resendosfconfirmation=Resend confirmation email
 screen.delegation.button.orcid=Sign in with ORCiD
 screen.delegation.button.institution=Sign in through institution
 #
@@ -573,8 +572,11 @@ authenticationFailure.InvalidVerificationKeyException=The verification key you e
 authenticationFailure.InvalidUserStatusException=The account you tried to log in to is not active.
 authenticationFailure.OneTimePasswordRequiredException=Two-factor authentication required.
 #
-# Authentication exception messages in stand-alone exceptions views
+# Authentication exception messages in stand-alone exception views
 #
+screen.authnerror.instructions=Oops! Something went wrong ...
+screen.authnerror.button.resendosfconfirmation=Resend confirmation email
+screen.authnerror.button.backtoosf=Exit and go back to OSF
 screen.accountdisabled.heading=Account disabled
 screen.accountdisabled.message=The OSF account associated with the email has been disabled. Please contact <a style=\
   "white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> to regain access.
