--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -523,7 +523,7 @@ copyright=Copyright &copy; 2011 &ndash; 2020 <a style="white-space: nowrap" href
   <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md">Terms of Use</a> &#124; \
   <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md">Privacy Policy</a> &#124; \
   <a style="white-space: nowrap" href="https://status.cos.io/">Status</a> &#124; \
-  <a style="white-space: nowrap" href="https://developer.osf.io/">API</a> &#124; \
+  <a style="white-space: nowrap" href="https://developer.osf.io/">API</a><br> \
   <a style="white-space: nowrap" href="http://cos.io/top/">TOP Guidelines</a> &#124; \
   <a style="white-space: nowrap" href="https://osf.io/ezcuj/wiki/home/">Reproducibility Project: Psychology</a> &#124; \
   <a style="white-space: nowrap" href="https://osf.io/e81xl/wiki/home/">Reproducibility Project: Cancer Biology</a>
