Fixed form validation error message for missing one-time password
In addition, removed binding of one-time password and verification
key from the default login form submission action. They shouldn't
have been there although nothing is broken.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -220,8 +220,8 @@ screen.service.initial.message=Attempting to access CAS or the indicated target 
   and then move onto other applications and services.
 
 captchaError=reCAPTCHA validation failed.
-username.required=Username is a required field.
-password.required=Password is a required field.
+# username.required=Username is a required field.
+# password.required=Password is a required field.
 source.required=Authentication source is a required field.
 
 # Password Management
@@ -560,6 +560,9 @@ screen.twofactor.button.cancel=Cancel
 #
 # Authentication exception messages on the login form submission page (inline / pop-up)
 #
+username.required=Email is required.
+password.required=Password is required.
+oneTimePassword.required=One-time password is required.
 authenticationFailure.AccountDisabledException=This account has been disabled.
 authenticationFailure.AccountNotFoundException=The email or password you entered is incorrect.
 authenticationFailure.AccountNotConfirmedOsfException=The account you tried to log in to has not been confirmed.
