Tweak inline error banner behavior
- The backend authn exception handling turns out to have a side
  effect that non-user fault errors such as requiring two-factor
  after successful first-step login are shown as a banner error.
  This may confuse users, leaving them wonder what they've done
  wrong. Added a filter to hide messages of such kind.

- In addition, banners are now dismissible "per error".

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -573,7 +573,7 @@ authenticationFailure.InvalidOneTimePasswordException=The one-time password you 
 authenticationFailure.InvalidPasswordException=The email or password you entered is incorrect.
 authenticationFailure.InvalidVerificationKeyException=The verification key you entered is incorrect.
 authenticationFailure.InvalidUserStatusException=The account you tried to log in to is not active.
-authenticationFailure.OneTimePasswordRequiredException=Two-factor authentication required.
+authenticationFailure.OneTimePasswordRequiredException=
 #
 # Authentication exception messages in stand-alone exception views
 #
