Implement CAS unavailable page
* Improved user-facing messages
* Detailed error info and stack trace are hidden
* User can expand and hide the details section
* Applied OSF theme and fixed responsive / mobile style

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -592,9 +592,12 @@ screen.accountnotconfirmedosf.heading=Account not confirmed
 screen.accountnotconfirmedosf.message=The OSF account associated with the email has been registered but not confirmed. \
   Please check your email (and spam folder) or click the button below to resend your confirmation email.
 screen.unavailable.header=CAS Error
-screen.unavailable.heading=OSF CAS is unable to process this request: "{0}:{1}".
-screen.unavailable.message=There was an error trying to complete your request. Please contact <a style="white-space: \
-  nowrap" href="mailto:support@osf.io">OSF Support</a> or try again later.
+screen.unavailable.heading=Service unavailable
+screen.unavailable.message=Your request cannot be completed at this time. Please return to OSF and try again later. If \
+  this issue persists, please contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> with \
+  a copy of the error details below.
+screen.unavailable.button.viewdetails=View error details
+screen.unavailable.button.hidedetails=Hide error details
 screen.invaliduserstatus.heading=Account not valid
 screen.invaliduserstatus.message=Cannot log in to an invalid account. If you believe this should not happen, please \
   contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a>.
