--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -547,6 +547,7 @@ screen.pm.button.createaccount=Create an OSF account
 screen.pm.button.backtoosf=Back to OSF
 screen.delegation.button.orcid=Sign in with ORCiD
 screen.delegation.button.institution=Sign in through institution
+screen.delegation.heading.orcidredirect=Redirecting to ORCiD
 #
 # Two factor and login form submission
 #
@@ -610,9 +611,6 @@ screen.onetimepasswordrequired.message=Two-factor authentication has been enable
   style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a>.
 screen.institutionssonotimplemented.heading=Institution login error
 screen.institutionssonotimplemented.message=The implementation of institution login page is work-in-progress, please \
-  check back later ...
-screen.orcidredirectnotimplemented.heading=ORCiD login error
-screen.orcidredirectnotimplemented.message=The implementation of ORCiD login auto-redirect is work-in-progress, please \
   check back later ...
 #
 # OSF URLs
