--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -263,7 +263,7 @@ UNAUTHORIZED_SERVICE_PROXY=The supplied service ''{0}'' is not authorized to use
 UNSATISFIED_AUTHN_POLICY=Service access denied due to an unsatisfied authentication policy.
 INVALID_AUTHN_REQUEST=Authentication attempt has failed, likely due to invalid credentials.
 
-screen.service.error.header=Application Not Authorized to Use CAS
+# screen.service.error.header=Application Not Authorized to Use CAS
 service.principal.resolution.error=CAS is unable to determine the correct authentication principal. \
   Either the principal could not be resolved correctly as a single unique entity or CAS has found \
   mixed/multiple candidate principals and is unable to decide which should be used. \
@@ -271,10 +271,10 @@ service.principal.resolution.error=CAS is unable to determine the correct authen
   due to missing privileges set by the CAS server authorization policies.
 service.not.authorized.missing.attr=You are not authorized to access the application as your account \
 is missing privileges required by the CAS server to authenticate into this service. Please notify your support desk.
-screen.service.error.message=The application you attempted to authenticate to is not authorized to use CAS. \
-  This usually indicates that the application is not registered with CAS, or its authorization policy defined in its registration record \
-  prevents it from leveraging CAS functionality, or it's malformed and unrecognized by CAS. \
-  Contact your CAS administrator to learn how you might register and integrate your application with CAS.
+# screen.service.error.message=The application you attempted to authenticate to is not authorized to use CAS. \
+#   This usually indicates that the application is not registered with CAS, or its authorization policy defined in its registration record \
+#   prevents it from leveraging CAS functionality, or it's malformed and unrecognized by CAS. \
+#   Contact your CAS administrator to learn how you might register and integrate your application with CAS.
 screen.service.empty.error.message=The services registry of CAS is empty and has no service definitions. \
 Applications that wish to authenticate with CAS must explicitly be defined in the services registry.
 screen.service.expired.message=The application you attempted to authenticate to has been expired in the CAS Service Registry. \
@@ -593,12 +593,17 @@ screen.accountnotconfirmedosf.heading=Account not confirmed
 screen.accountnotconfirmedosf.message=The OSF account associated with the email has been registered but not confirmed. \
   Please check your email (and spam folder) or click the button below to resend your confirmation email.
 screen.unavailable.header=CAS Error
-screen.unavailable.heading=Service unavailable
+screen.unavailable.heading=CAS unavailable
 screen.unavailable.message=Your request cannot be completed at this time. Please return to OSF and try again later. If \
   this issue persists, please contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> with \
   a copy of the error details below.
 screen.unavailable.button.viewdetails=View error details
 screen.unavailable.button.hidedetails=Hide error details
+screen.service.error.header=Service Error
+screen.service.error.heading=Service not authorized
+screen.service.error.message=The application you attempted to authenticate to is not authorized to use OSF CAS. Please \
+  return to OSF and try again. If this issue persists, please contact <a style="white-space: nowrap" \
+  href="mailto:support@osf.io">OSF Support</a>
 screen.invaliduserstatus.heading=Account not valid
 screen.invaliduserstatus.message=Cannot log in to an invalid account. If you believe this should not happen, please \
   contact <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a>.
