Rewrite generic logout page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -559,6 +559,14 @@ screen.twofactor.button.verify=Verify
 screen.twofactor.button.verifywip=One moment please...
 screen.twofactor.button.cancel=Cancel
 #
+# Generic logout success page
+#
+screen.generic.logout.header=Signed-out
+screen.generic.logout.heading=Logout successful
+screen.generic.logout.message=You have successfully logged out of the OSF Central Authentication Service (CAS). You may continue to OSF signed-out or return to the sign-in page.
+screen.generic.button.backtoosf=Continue to OSF
+screen.generic.button.backtologin=Return to sign-in
+#
 # Authentication exception messages on the login form submission page (inline / pop-up)
 #
 username.required=Email is required.
@@ -623,6 +631,7 @@ screen.institutionssonotimplemented.message=The implementation of institution lo
 # OSF
 #
 osf.home.url=https://staging3.osf.io/
+osf.logout.url=https://staging3.osf.io/logout
 osf.resend.osf.confirmation.url=https://staging3.osf.io/resend/
 osf.forgot.password.url=https://staging3.osf.io/forgotpassword/
 osf.create.account.url=https://staging3.osf.io/register/
