--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -559,13 +559,19 @@ screen.twofactor.button.verify=Verify
 screen.twofactor.button.verifywip=One moment please...
 screen.twofactor.button.cancel=Cancel
 #
-# Generic logout success page
+# Generic login and logout success page
 #
 screen.generic.logout.header=Signed-out
 screen.generic.logout.heading=Logout successful
 screen.generic.logout.message=You have successfully logged out of the OSF Central Authentication Service (CAS). You may continue to OSF signed-out or return to the sign-in page.
+screen.generic.login.header=Signed-in
+screen.generic.login.heading=Login successful
+screen.generic.login.message=You have successfully logged into the OSF Central Authentication Service (CAS). You may continue to OSF signed-in or log out and go back to OSF home page.
 screen.generic.button.backtoosf=Continue to OSF
 screen.generic.button.backtologin=Return to sign-in
+screen.generic.button.logout=Log out
+screen.generic.button.viewdetails=View authentication details
+screen.generic.button.hidedetails=Hide authentication details
 #
 # Authentication exception messages on the login form submission page (inline / pop-up)
 #
