Improve narrow and wide screen UI / UX
* Set max width limit for the content card while using large screen;
  let the card uses 100% width on medium and small screen; and left-
  align contents and reduce their width/height/sizes on small screen
* Fixed a chrome-only issue that texts in p tag don't wrap properly.
  It used to keep the card too wide that didn't work well with the
  card's fit-content sytle.
* Improved spacing between button and texts
* All pages now look in-shape on screen as narrow as 320px

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -552,12 +552,13 @@ screen.delegation.heading.orcidredirect=Redirecting to ORCiD
 # Two factor and login form submission
 #
 cas.twofactor.pagetitle=Sign in
-screen.twofactor.instructions=Enter your one-time password to finish login
+screen.twofactor.instructions.top=Enter your one-time password to finish login
 screen.twofactor.label.onetimepassword=<span class="accesskey">O</span>ne-time password (6-digit)
 screen.twofactor.label.onetimepassword.accesskey=o
 screen.twofactor.button.verify=Verify
 screen.twofactor.button.verifywip=One moment please...
 screen.twofactor.button.cancel=Cancel
+screen.twofactor.instructions.bottom=Open the two-factor authentication app on your device to view your authentication code and verify your identity.
 #
 # Generic login and logout success page
 #
