Update web flow and implement institution login page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -557,6 +557,23 @@ screen.twofactor.button.verifywip=One moment please...
 screen.twofactor.button.cancel=Cancel
 screen.twofactor.instructions.bottom=Open the two-factor authentication app on your device to view your authentication code and verify your identity.
 #
+# Institution login page
+#
+screen.institutionlogin.pagetitle=Institution SSO
+screen.institutionlgoin.bannertitle=OSF Institutions
+screen.institutionlogin.heading=Sign in through institution
+screen.institutionlogin.message=If your institution has partnered with OSF, please select its name below and sign in with your institutional credentials. If you do not currently have an OSF account, this will create one for you.
+screen.institutionlogin.select=Select your institution
+screen.institutionlogin.select.auto=Your institution
+screen.institutionlogin.select.all=Not your institution?
+screen.institutionlogin.select.errormessage=You must select an institution.
+screen.institutionlogin.button.submit=Sign in
+screen.institutionlogin.osf=Sign in with OSF
+screen.institutionlogin.backtoosf=Exit and go back to OSF
+screen.institutionlogin.consent.checkbox=I have read and agree to the <a style="white-space: nowrap" href=https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md>Terms of Use</a> and <a style="white-space: nowrap" href=https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md>Privacy Policy</a>.
+screen.institutionlogin.consent.errormessage=You must read and agree to the <span style="white-space: nowrap">Terms of Use</span> and <span style="white-space: nowrap">Privacy Policy</span>.
+
+#
 # Generic login and logout success page
 #
 screen.generic.logout.header=Signed-out
