Use cas.properties instead of messages.properties for URLs on FE
In addition, "Continue to OSF" on the generic / no-service login
success page now goes to OSF dashboard instead of OSF home so that
auto-login is triggered.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -504,16 +504,16 @@ noop.message=This's a noop message.
 # App drawer (left)
 #
 cas.drawer.title=OSF CAS
-cas.drawer.subtitle=OSF CAS is the central authentication and authorization service for OSF
+cas.drawer.subtitle=OSF CAS is the central authentication service for OSF
 cas.login.resources.cas.home=CAS Home
 cas.login.resources.osf.home=OSF Home
 cas.login.resources.osf.preprints=OSF Preprints
 cas.login.resources.osf.registries=OSF Registries
 cas.login.resources.osf.meetings=OSF Meetings
 cas.login.resources.osf.institutions=OSF Institutions
+cas.login.resources.osf.search=Search
 cas.login.resources.osf.support=OSF Support
-cas.login.resources.cos.donate=Donate
-cas.login.resources.cos.home=COS Home
+cas.login.resources.osf.donate=Donate
 #
 # App notifications (right)
 #
@@ -646,29 +646,6 @@ screen.onetimepasswordrequired.message=Two-factor authentication has been enable
 screen.institutionssonotimplemented.heading=Institution login error
 screen.institutionssonotimplemented.message=The implementation of institution login page is work-in-progress, please \
   check back later ...
-#
-# OSF URLs
-#
-# OSF
-#
-osf.home.url=https://staging3.osf.io/
-osf.logout.url=https://staging3.osf.io/logout
-osf.resend.osf.confirmation.url=https://staging3.osf.io/resend/
-osf.forgot.password.url=https://staging3.osf.io/forgotpassword/
-osf.create.account.url=https://staging3.osf.io/register/
-#
-# API
-#
-# Other
-#
-osf.preprints.home.url=https://staging3.osf.io/preprints/
-osf.registries.home.url=https://staging3.osf.io/registries/
-osf.institutions.home.url=https://staging3.osf.io/institutions/
-osf.meetings.home.url=https://staging3.osf.io/meetings/
-osf.support.url=https://staging3.osf.io/support/
-osf.cos.donation.url=https://www.cos.io/about/support-cos/
-osf.cos.home.url=https://www.cos.io/
-#
 ########################################################################################################################
 #
 # Enf of OSF CAS customized messages.properties
