--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -558,6 +558,22 @@ screen.twofactor.button.verifywip=One moment please...
 screen.twofactor.button.cancel=Cancel
 screen.twofactor.instructions.bottom=Open the two-factor authentication app on your device to view your authentication code and verify your identity.
 #
+# Terms of service consent check login form submission
+#
+screen.tosconsent.pagetitle=Terms of service
+screen.tosconsent.instructions.top=Terms of use and privacy policy
+screen.tosconsent.message.p1=You must read and agree to our \
+  <a style="white-space: nowrap" href=https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md>Terms of Use</a> and \
+  <a style="white-space: nowrap" href=https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md>Privacy Policy</a> \
+  to finish login.
+screen.tosconsent.message.p2=You are seeing this page, either because this is your first-time login to OSF via your \
+  institution, or because we have recently updated the terms.
+screen.tosconsent.message.p3=Please read them carefully and contact \
+  <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> should you have any question.
+screen.tosconsent.checkbox.title=I have read and agree to these terms.
+screen.tosconsent.button.agree=Continue
+screen.tosconsent.button.agreewip=One moment please...
+#
 # Institution login page
 #
 screen.institutionlogin.pagetitle=Institution SSO
@@ -594,6 +610,7 @@ screen.generic.button.hidedetails=Hide authentication details
 username.required=Email is required.
 password.required=Password is required.
 oneTimePassword.required=One-time password is required.
+termsOfServiceChecked.required=Terms of service consent is required.
 authenticationFailure.AccountDisabledException=This account has been disabled.
 authenticationFailure.AccountNotFoundException=The email or password you entered is incorrect.
 authenticationFailure.AccountNotConfirmedOsfException=The account you tried to log in to has not been confirmed.
@@ -605,6 +622,7 @@ authenticationFailure.InvalidPasswordException=The email or password you entered
 authenticationFailure.InvalidVerificationKeyException=The verification key you entered is incorrect.
 authenticationFailure.InvalidUserStatusException=The account you tried to log in to is not active.
 authenticationFailure.OneTimePasswordRequiredException=
+authenticationFailure.TermsOfServiceConsentRequiredException=
 #
 # Authentication exception messages in stand-alone exception views
 #
