Add a link to cancel TOS constent and quit login

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -573,6 +573,7 @@ screen.tosconsent.message.p3=Please read them carefully and contact \
 screen.tosconsent.checkbox.title=I have read and agree to these terms.
 screen.tosconsent.button.agree=Continue
 screen.tosconsent.button.agreewip=One moment please...
+screen.tosconsent.link.cancel=Cancel and go back to OSF
 #
 # Institution login page
 #
