Update and use submit button template; update affected pages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -547,10 +547,11 @@ screen.delegation.button.institution=Sign in through institution
 screen.delegation.heading.orcidredirect=Redirecting to ORCiD
 screen.flowless.heading.defaultserviceredirect=Redirecting to OSF login
 #
-# Two factor and login form submission
+# Two factor login form submission
 #
-cas.twofactor.pagetitle=Sign in
+screen.twofactor.pagetitle=Sign in
 screen.twofactor.instructions.top=Enter your one-time password to finish login
+screen.twofactor.label.email=OSF account email
 screen.twofactor.label.onetimepassword=<span class="accesskey">O</span>ne-time password (6-digit)
 screen.twofactor.label.onetimepassword.accesskey=o
 screen.twofactor.button.verify=Verify
