Fix CDATA for form submission buttons and update messages.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -529,6 +529,10 @@ copyright.cos=<span style="white-space: nowrap">Copyright &copy; 2011 &ndash; 20
 #
 screen.welcome.label.loginwith=Sign in through external identity providers
 #
+# Texts and messages that are shared across all pages
+#
+screen.generic.button.wip = One moment please ...
+#
 # Login page and login form submission
 #
 cas.login.pagetitle=Sign in
@@ -555,7 +559,6 @@ screen.twofactor.label.email=OSF account email
 screen.twofactor.label.onetimepassword=<span class="accesskey">O</span>ne-time password (6-digit)
 screen.twofactor.label.onetimepassword.accesskey=o
 screen.twofactor.button.verify=Verify
-screen.twofactor.button.verifywip=One moment please...
 screen.twofactor.button.cancel=Cancel
 screen.twofactor.instructions.bottom=Open the two-factor authentication app on your device to view your authentication code and verify your identity.
 #
@@ -573,7 +576,6 @@ screen.tosconsent.message.p3=Please read them carefully and contact \
   <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> should you have any question.
 screen.tosconsent.checkbox.title=I have read and agree to these terms.
 screen.tosconsent.button.agree=Continue
-screen.tosconsent.button.agreewip=One moment please...
 screen.tosconsent.link.cancel=Cancel and go back to OSF
 #
 # Institution login page
