--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -567,13 +567,13 @@ screen.twofactor.instructions.bottom=Open the two-factor authentication app on y
 screen.tosconsent.pagetitle=Terms of service
 screen.tosconsent.instructions.top=Terms of use and privacy policy
 screen.tosconsent.message.p1=You must read and agree to our \
-  <a style="white-space: nowrap" href=https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md>Terms of Use</a> and \
-  <a style="white-space: nowrap" href=https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md>Privacy Policy</a> \
+  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/TERMS_OF_USE.md>Terms of Use"</a> and \
+  <a style="white-space: nowrap" href="https://github.com/CenterForOpenScience/centerforopenscience.org/blob/master/PRIVACY_POLICY.md>Privacy Policy"</a> \
   to finish login.
 screen.tosconsent.message.p2=You are seeing this page, either because this is your first-time login to OSF via your \
   institution, or because we have recently updated the terms.
 screen.tosconsent.message.p3=Please read them carefully and contact \
-  <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> should you have any question.
+  <a style="white-space: nowrap" href="mailto:support@osf.io">OSF Support</a> should you have any questions.
 screen.tosconsent.checkbox.title=I have read and agree to these terms.
 screen.tosconsent.button.agree=Continue
 screen.tosconsent.link.cancel=Cancel and go back to OSF
