Redesign the support links
* Removed the pmlink fragment
* Added right-floating password and sign-in support links
  under the sign-in button
* Moved left-floating remember-me checkbox to under the
  sign-in button in the same section of the support links

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -532,6 +532,7 @@ screen.welcome.label.loginwith=Sign in through external identity providers
 # Texts and messages that are shared across all pages
 #
 screen.generic.button.wip = One moment please ...
+screen.generic.link.loginsupport = Need help signing in?
 #
 # Login page and login form submission
 #
@@ -543,9 +544,7 @@ screen.welcome.label.password=<span class="accesskey">P</span>assword
 screen.welcome.label.password.accesskey=p
 screen.welcome.button.login=Sign in
 screen.rememberme.checkbox.title=Stay signed in
-screen.pm.button.forgotpwd=Forgot your password?
-screen.pm.button.createaccount=Create an OSF account
-screen.pm.button.backtoosf=Back to OSF
+screen.help.link.resetpassword=Reset password
 screen.delegation.button.orcid=Sign in with ORCiD
 screen.delegation.button.institution=Sign in through institution
 screen.delegation.heading.orcidredirect=Redirecting to ORCiD
